一旦コミット

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,151 +1,6 @@
-@use "./destyle.css";
+@use "App";
+@use "RTG";
 
-@font-face {
-  font-family: "HarmonyOS Sans";
-  font-style: normal;
-  font-weight: 400;
-  src: local("HarmonyOS Sans"),
-    url("../../src/fonts/HarmonyOS_Sans/HarmonyOS_Sans_Regular.woff2")
-      format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Noto Sans JP";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Noto Sans JP"),
-    url("../../src/fonts/NotoSans/NotoSansJP-Regular.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Material Icons";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Material Icons"),
-    url("../../src/fonts/MaterialIcons/MaterialIcons-Regular.woff2")
-      format("woff2");
-  font-display: block;
-}
-
-:root {
-  --color-fore: #ffffff;
-  --color-back: #f1f3f5;
-  --color-back-mute: rgba(0, 0, 0, 0.1);
-  --color-accent: #0c8262;
-  --color-text: #202020;
-  --color-text-mute: #9e9e9e;
-  --color-separate: #00000033;
-  --color-shadow: #20203033;
-
-  --base-size: 44px;
-  --base-radius: calc(var(--base-size) / 4);
-
-  &.dark {
-    --color-fore: #202020;
-    --color-back: #000000;
-    --color-accent: #0c8262;
-    --color-text: #ffffff;
-    --color-text-mute: #9e9e9e;
-  }
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--color-back);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--color-separate);
-}
-
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  color: var(--color-text);
-  font-size: 16px;
-  font-family: "HarmonyOS Sans", "Noto Sans JP", sans-serif;
-  background-color: var(--color-back);
-  accent-color: var(--color-accent);
-}
-
-i {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  display: block;
-  width: calc(var(--base-size) / 2);
-  font-size: calc(var(--base-size) / 2);
-  height: calc(var(--base-size) / 2);
-  line-height: calc(var(--base-size) / 2);
-  user-select: none;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  font-feature-settings: "liga";
-}
-
-#root {
-  display: grid;
-  grid-template:
-    "h" auto
-    "m" 1fr
-    "f" auto;
-
-  > header {
-    grid-area: h;
-    height: 50px;
-    padding: 0 calc(var(--base-size) / 2);
-    display: grid;
-    grid-template: "l c r" / auto 1fr auto;
-    align-items: center;
-
-    >button:first-child {
-      grid-area: l;
-    }
-    >h1 {
-      grid-area: c;
-      font-size: 1.1em;
-      margin-bottom: 3px;
-    }
-    >:is(a,button) {
-      grid-area: r;
-    }
-
-    button {
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-  > main {
-    grid-area: m;
-  }
-
-  > footer {
-    grid-area: f;
-  }
-}
-
-#top {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+@use "Top";
+@use "Settings";
+@use "Chat";
