--- a/src/css/_App.scss
+++ b/src/css/_App.scss
@@ -1,6 +1,6 @@
 @use "./destyle.css";
 
-@use "var" as *;
+@use "./Var" as *;
 
 @font-face {
   font-family: "HarmonyOS Sans";
@@ -47,11 +47,7 @@
   scrollbar-width: thin;
   scrollbar-color: $color-separate transparent;
 }
-
-html,
-body,
-#root,
-#root > div {
+:where(html, body, #root, #root > div) {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -175,7 +171,7 @@ i {
   cursor: pointer;
   background-color: $color-back-mute;
   transition: background-color $transition-time ease-in-out;
-  &:is(:checked,.checked) {
+  &:is(:checked, .checked) {
     background-color: $color-accent-mute;
 
     &::after {
