--- a/src/css/_Var.scss
+++ b/src/css/_Var.scss
@@ -3,6 +3,7 @@ $color-back: #f1f3f5;
 $color-back-mute: rgba(0, 0, 0, 0.1);
 $color-accent: #41adef;
 $color-accent-mute: #41adef70;
+$color-accent-alt: #e84026;
 $color-text: #202020;
 $color-text-mute: #9e9e9e;
 $color-separate: #00000033;
