ほぼ最終版

--- a/src/css/_App.scss
+++ b/src/css/_App.scss
@@ -46,6 +46,7 @@
 * {
   scrollbar-width: thin;
   scrollbar-color: $color-separate transparent;
+  outline-color: $color-accent;
 }
 :where(html, body, #root, #root > div) {
   width: 100%;
