--- a/src/css/_Settings.scss
+++ b/src/css/_Settings.scss
@@ -26,6 +26,7 @@
           background-color: $color-separate;
         }
         > .item {
+          width: 100%;
           min-height: $base-size;
           padding: 0 calc($base-size / 4);
           border-radius: $base-radius;
