--- a/src/css/_App.scss
+++ b/src/css/_App.scss
@@ -60,6 +60,8 @@ body {
   font-family: "HarmonyOS Sans", "Noto Sans JP", sans-serif;
   background-color: $color-back;
   accent-color: $color-accent;
+  // max-width: 900px;
+  // margin: 0 auto;
 }
 
 i {
