--- a/src/css/_App.scss
+++ b/src/css/_App.scss
@@ -13,15 +13,6 @@
 }
 
 @font-face {
-  font-family: "Noto Sans JP";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Noto Sans JP"),
-    url("../../src/fonts/NotoSans/NotoSansJP-Regular.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
@@ -41,6 +32,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: $color-separate;
+  border-radius: $base-radius;
 }
 
 * {
@@ -51,13 +43,13 @@
 :where(html, body, #root, #root > div) {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
   color: $color-text;
   font-size: 16px;
-  font-family: "HarmonyOS Sans", "Noto Sans JP", sans-serif;
+  font-family: "HarmonyOS Sans", "Noto Sans JP", "BIZ UDGothic", "Hiragino Sans",
+    "Hiragino Kaku Gothic ProN", "メイリオ", "Meiryo", sans-serif;
   background-color: $color-back;
   accent-color: $color-accent;
   // max-width: 900px;
@@ -141,8 +133,10 @@ i {
   height: $base-size;
   border-radius: $base-radius;
   background-color: $color-fore;
-  display: grid;
-  place-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   transition: filter $transition-time ease-in-out;
   user-select: none;
 
