--- a/src/css/_Settings.scss
+++ b/src/css/_Settings.scss
@@ -46,4 +46,14 @@
       }
     }
   }
+  > footer {
+    height: $base-size;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    a:is(:hover, :focus) {
+      text-decoration: underline;
+    }
+  }
 }
