--- a/src/css/_Top.scss
+++ b/src/css/_Top.scss
@@ -12,8 +12,8 @@
       justify-items: center;
       gap: $base-size;
       > .avatar {
-        width: $base-size * 6;
-        height: $base-size * 6;
+        width: min($base-size * 6, 100%);
+        aspect-ratio: 1/1;
         position: relative;
 
         > .img {
@@ -34,7 +34,7 @@
       }
 
       > input[type="text"] {
-        width: $base-size * 6;
+        width: min($base-size * 6, 100%);
         height: $base-size;
         padding: 1rem;
         background-color: $color-fore;
