新規ページの追加やら調整やら

--- a/src/css/_OpenSourceLicense.scss
+++ b/src/css/_OpenSourceLicense.scss
@@ -42,3 +42,11 @@
     }
   }
 }
+
+.btns {
+  display: flex;
+  gap: calc($base-size / 4);
+  @media screen and (max-width:450px) {
+    flex-wrap: wrap;
+  }
+}
