--- a/src/css/_QA.scss
+++ b/src/css/_QA.scss
@@ -1,6 +1,6 @@
 @use "./Var" as *;
 
-#help {
+#qa {
   overflow-y: auto;
   > main {
     padding: 0 calc($base-size / 2);
@@ -42,10 +42,18 @@
           left: calc($base-size / 4);
           background-color: $color-separate;
         }
-        >p {
+        > p {
           padding: calc($base-size / 8) 0;
+          line-height: 1.5rem;
         }
       }
+    }
+  }
+
+  a {
+    color: $color-accent;
+    &:is(:hover, :focus) {
+      text-decoration: underline;
     }
   }
 }
